# build-me-a-container

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: build-me-a-container.1.md  dev.brny.angrypig555.build-me-a-container.metainfo.xml
src/: main.cpp
